BRS-30 #time 30m fixed layout issues

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -310,3 +310,19 @@
   background-image: image-url("orange_buttons/add.jpg");
   background-repeat: no-repeat;
   background-position: center left; }
+
+.confirmHolder {
+  p {
+    width: 90%;
+    float: left;
+  }
+  input {
+    width: 5%;
+    float: right;
+  }
+}
+
+
+button:focus {outline:0;}
+a:focus {outline:0;}
+#colorbox:focus { outline: 0;}
